# project-rh

./: .env  README.md  db.sqlite3  importar_cargos.py  pyproject.toml
config/: settings.py  urls.py
hierarquia/: admin.py  api_serializers.py  api_urls.py  api_views.py  apps.py  models.py  models_funcionario.py  resources.py  urls.py  views copy para salvar aqui caso de merda.py  views.py
hierarquia/migrations/: 0001_initial.py  0002_remove_funcionario_ra_adcinte_and_more.py  0002_remove_funcionario_setor_funcionario_setor.py  0002_vaga_requisicaopessoal.py  0003_rename_aprovado_por_coordenador_requisicaopessoal_aprovado_por_gestor_and_more.py  0004_movimentacaopessoal.py  0005_remove_movimentacaopessoal_aprovado_por_gestor_atual_and_more.py  0006_requisicaodesligamento.py
hierarquia/templatetags/: rh_tags.py
static/css/: base.css  dashboard.css  gerenciar_cargos.css  gerenciar_setores.css  listar_funcionarios.css  listar_setores.css  login.css
staticfiles/css/: cadastrar_funcionario.css  detalhar_funcionario.css  gerenciar_setores.css  listar_setores.css
templates/: base.html
templates/hierarquia/: cadastrar_funcionario.html  criar_requisicao.html  dashboard.html  detalhar_funcionario.html  detalhar_requisicao.html  gerenciar_cargos.html  gerenciar_setores.html  listar_funcionarios.html  listar_requisicoes.html  listar_setores.html  login.html  sem_acesso.html  sem_permissao.html  shift_handover.html
templates/rh/: aprovar_mps_list.html  aprovar_rds_list.html  aprovar_rps_list.html  historico_mps_list.html  historico_rds_list.html  historico_rps_list.html  (+13 more)
(+44 files in other folders)
